# rust-service-example

./: Cargo.toml  README.md
src/: aggregator.rs  counter.rs  main.rs
