[package]
name = "rust-service-example"
version = "0.1.0"
authors = ["grindlemire <grindlemire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
death-rs = {path = "../death-rs"}
crossbeam-channel = "0.5.0"
simple_logger = "1.11.0"
log = "0.4.11"
signal-hook = "0.2.2"
rand = "0.7.3"
clap = "3.0.0-beta.1"
